--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "sass": "^1.66.1",
     "styled-components": "^6.0.7",
     "three": "^0.156.1"
