--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.14.1",
+    "gsap": "^3.12.2",
     "next": "13.4.19",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
