--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@hookform/resolvers": "^3.3.0",
     "@react-three/fiber": "^8.14.1",
+    "@sendgrid/mail": "^7.7.0",
+    "express": "^4.18.2",
     "gsap": "^3.12.2",
     "next": "13.4.19",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.11.0",
     "sass": "^1.66.1",
     "styled-components": "^6.0.7",
-    "three": "^0.156.1"
+    "three": "^0.156.1",
+    "yup": "^1.2.0"
   }
 }
